# hexocean-task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: manage.py  pytest.ini
src/hexocean/: asgi.py  settings.py  urls.py  wsgi.py
src/hexocean_app/: admin.py  apps.py  constants.py  models.py  serializers.py  services.py  urls.py  views.py
src/hexocean_app/migrations/: 0001_initial.py  0002_auto_20230310_1336.py
src/hexocean_app/tests/: test_views.py
